--- a/findBugsEclipsePlugin/.classpath
+++ b/findBugsEclipsePlugin/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="edu/umd/cs/findbugs/gui2/|edu/umd/cs/findbugs/launchGUI/|edu/umd/cs/findbugs/workflow/MergeSummarizeAndView.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/annotations.jar"/>
 	<classpathentry kind="lib" path="lib/jFormatString.jar"/>
 	<classpathentry kind="lib" path="lib/bcel.jar"/>
@@ -13,6 +13,7 @@
 	<classpathentry kind="lib" path="lib/asm-commons-3.3.jar" sourcepath="/findbugs/lib/asm-src-3.3.zip"/>
 	<classpathentry kind="lib" path="lib/asm-tree-3.3.jar" sourcepath="/findbugs/lib/asm-src-3.3.zip"/>
 	<classpathentry kind="lib" path="lib/asm-util-3.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="src" path="xsl"/>
 	<classpathentry kind="src" path="etc"/>
 	<classpathentry kind="output" path="bin_eclipse"/>
